[workspace]
members = [
    'm/actions',
    'm/ast',
    'm/cli',
    'm/lex',
    'm/parse',
    'm/show',
]
[patch.crates-io.actions]
path = 'm/actions'

[patch.crates-io.ast]
path = 'm/ast'

[patch.crates-io.cli]
path = 'm/cli'

[patch.crates-io.lex]
path = 'm/lex'

[patch.crates-io.parse]
path = 'm/parse'

[patch.crates-io.show]
path = 'm/show'
