[package]
name = 'cli'
version = '0.0.1'
edition = '2018'
[dependencies.error]
version = '0.0.1'
path = '../error'

[dependencies.lex]
version = '0.0.1'
path = '../lex'

[dependencies.log]
version = '>= 0.4.14'

[dependencies.parse]
version = '0.0.1'
path = '../parse'

[dependencies.pretty_env_logger]
version = '>= 0.4.0'

[dependencies.resolve]
version = '0.0.1'
path = '../resolve'

[dependencies.show]
version = '0.0.1'
path = '../show'
