[package]
name = 'parse'
version = '0.0.1'
edition = '2018'
[dependencies.actions]
version = '0.0.1'
path = '../actions'

[dependencies.ast]
version = '0.0.1'
path = '../ast'

[dependencies.lalrpop-util]
version = '0.19.6'

[dependencies.lex]
version = '0.0.1'
path = '../lex'

[dependencies.log]
version = '>= 0.4.14'
[build-dependencies]
lalrpop = "0.19.6"
